third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/hex_and_decimal_address.exp
module 0x7b::M {
    struct S has copy, drop {
    }
    public fun s(): S {
        S{}
    }
    public fun take(_s: S) {
        ()
    }
}

script {
    use 0x7b::M;
    entry fun <SELF>_0() {
        M::take(M::s());
        M::take(M::s());
        M::take(M::s());
        M::take(M::s());
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ hex_and_decimal_address.move:14:15
   │
14 │     entry fun <SELF>_0() {
   │               ^
   │               │
   │               Unexpected '<'
   │               Expected an identifier
